--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -60,11 +60,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountData.cs" />
+    <Compile Include="Figure\Circle.cs" />
+    <Compile Include="Figure\Figure.cs" />
+    <Compile Include="Figure\Square.cs" />
+    <Compile Include="GroupData.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GroupCreationTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Figure\ClassDiagramFigure.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
