--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -60,19 +60,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountData.cs" />
+    <Compile Include="ContactsData\ContactsData.cs" />
+    <Compile Include="GroupData\AccountData.cs" />
     <Compile Include="Figure\Circle.cs" />
     <Compile Include="Figure\Figure.cs" />
     <Compile Include="Figure\Square.cs" />
-    <Compile Include="GroupData.cs" />
+    <Compile Include="GroupData\GroupData.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GroupCreationTests.cs" />
+    <Compile Include="ContactCreationTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Figure\ClassDiagramFigure.cd" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
