--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -60,18 +60,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ContactsData\ContactsData.cs" />
-    <Compile Include="GroupData\AccountData.cs" />
+    <Compile Include="App_manager\ApplicationManager.cs" />
+    <Compile Include="Model\ContactsData.cs" />
+    <Compile Include="Model\AccountData.cs" />
     <Compile Include="Figure\Circle.cs" />
     <Compile Include="Figure\Figure.cs" />
     <Compile Include="Figure\Square.cs" />
-    <Compile Include="GroupData\GroupData.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Model\GroupData.cs" />
+    <Compile Include="App_manager\GroupHelper.cs" />
+    <Compile Include="App_manager\HelperBase.cs" />
+    <Compile Include="App_manager\LoginHelper.cs" />
+    <Compile Include="App_manager\LogoutHelper.cs" />
+    <Compile Include="App_manager\NavigationHelper.cs" />
+    <Compile Include="Tests\TestBasse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GroupCreationTests.cs" />
-    <Compile Include="ContactCreationTest.cs" />
+    <Compile Include="Tests\GroupCreationTests.cs" />
+    <Compile Include="Tests\ContactCreationTest.cs" />
+    <Compile Include="Tests\GroupRemovalTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Figure\ClassDiagramFigure.cd" />
     <None Include="packages.config" />
   </ItemGroup>
