Базовый класс, двухуровневую архитектура.

--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -75,8 +75,9 @@
     <Compile Include="Tests\TestBasse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\GroupCreationTests.cs" />
-    <Compile Include="Tests\ContactCreationTest.cs" />
-    <Compile Include="Tests\GroupRemovalTest.cs" />
+    <Compile Include="Tests\ContactCreationTests.cs" />
+    <Compile Include="Tests\GroupRemovalTests.cs" />
+    <Compile Include="Tests\GroupModificationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
