--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_manager\ApplicationManager.cs" />
+    <Compile Include="App_manager\ContactHelper.cs" />
     <Compile Include="Model\ContactsData.cs" />
     <Compile Include="Model\AccountData.cs" />
     <Compile Include="Figure\Circle.cs" />
@@ -72,12 +73,13 @@
     <Compile Include="App_manager\LoginHelper.cs" />
     <Compile Include="App_manager\LogoutHelper.cs" />
     <Compile Include="App_manager\NavigationHelper.cs" />
+    <Compile Include="Tests\Contacts\ContactRemovalTests.cs" />
     <Compile Include="Tests\TestBasse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\GroupCreationTests.cs" />
-    <Compile Include="Tests\ContactCreationTests.cs" />
-    <Compile Include="Tests\GroupRemovalTests.cs" />
-    <Compile Include="Tests\GroupModificationTests.cs" />
+    <Compile Include="Tests\Groups\GroupCreationTests.cs" />
+    <Compile Include="Tests\Contacts\ContactCreationTests.cs" />
+    <Compile Include="Tests\Groups\GroupRemovalTests.cs" />
+    <Compile Include="Tests\Groups\GroupModificationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
