--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -70,17 +70,17 @@
     <Compile Include="App_manager\GroupHelper.cs" />
     <Compile Include="App_manager\HelperBase.cs" />
     <Compile Include="App_manager\LoginHelper.cs" />
-    <Compile Include="App_manager\LogoutHelper.cs" />
     <Compile Include="App_manager\NavigationHelper.cs" />
     <Compile Include="Tests\Contacts\ContactModificationTests.cs" />
     <Compile Include="Tests\Contacts\ContactRemovalTests.cs" />
+    <Compile Include="Tests\AuthTestBase.cs" />
+    <Compile Include="Tests\LoginTests.cs" />
     <Compile Include="Tests\TestBasse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Groups\GroupCreationTests.cs" />
     <Compile Include="Tests\Contacts\ContactCreationTests.cs" />
     <Compile Include="Tests\Groups\GroupRemovalTests.cs" />
     <Compile Include="Tests\Groups\GroupModificationTests.cs" />
-    <Compile Include="Tests\TestSuiteFixture.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
