--- a/addressbook-web-tests/addressbook-web-tests/packages.config
+++ b/addressbook-web-tests/addressbook-web-tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Json.Net" version="1.0.23" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.1.1" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net472" />
   <package id="NUnit" version="2.7.1" targetFramework="net472" />
